--- a/app/build.gradle
+++ b/app/build.gradle
@@ -18,7 +18,10 @@ android {
         }
     }
     repositories {
-        maven { url "https://jitpack.io" }
+        maven {
+            url 'https://maven.google.com'
+        }
+
     }
 
 }
@@ -31,7 +34,7 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'androidx.recyclerview:recyclerview:1.1.0'
-    implementation 'com.github.livefront:bridge:v1.2.1'
-    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.legacy:legacy-support-core-utils:1.0.0'
     implementation files('D:/jsch-0.1.55')
 }
