--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,7 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'androidx.legacy:legacy-support-core-utils:1.0.0'
     implementation files('D:/jsch-0.1.55')
+    implementation 'commons-net:commons-net:3.6'
+    implementation 'org.apache.commons:commons-lang3:3.0'
+
 }
